--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -27,10 +27,10 @@
   font-size: 14px;
 }
 
-.user-history {
+.user-menu-link {
   color: #fff;
 }
 
-.user-history:hover {
+.user-menu-link:hover {
   color: #888e97 !important;
 }
